fix spacing again

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -77,7 +77,8 @@
 @media screen and (max-width: 1000px) {
     .window {
         width: 80%;
-        height: 57vh;
+        height: 50vh;
+        margin-bottom: 20px;
     }
     .avatar img{
         height: 85px;
@@ -87,14 +88,15 @@
     .titlebartext{
         font-size: 20px;
     }
-
     .windowbody h2 {
-        font-size: 30px;
+        font-size: 20px;
+        white-space: nowrap;       
+        overflow: hidden;
     }
     .windowbody p{
         font-size: 20px;
+        margin-bottom: -20px;
     }
-
     .windowbody li {
         font-size: 20px;
     }
